# convex-hull

./: .gitignore  compilation.txt  tp-convex.docx
src/: CMakeLists.txt  cleanup.bat  convex.ui  glviewer.cpp  glviewer.h  main.cpp  scene.h  window.cpp  window.h
